Bug 12538 - Backport winbind fixes
Summary: Backport winbind fixes
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.6.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-25 07:15 UTC by Andreas Schneider
Modified: 2017-01-27 05:18 UTC (History)
3 users (show)

See Also:


Attachments
patchset for 4.6 (13.80 KB, patch)
2017-01-25 07:16 UTC, Andreas Schneider
jra: review+
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2017-01-25 07:15:09 UTC
Backport fixes for winbind for the latest additions.
Comment 1 Andreas Schneider 2017-01-25 07:16:41 UTC
Created attachment 12848 [details]
patchset for 4.6
Comment 2 Karolin Seeger 2017-01-25 18:43:12 UTC
(In reply to Andreas Schneider from comment #1)
Pushed to autobuild-v4-6-test.
Comment 3 Karolin Seeger 2017-01-27 05:18:46 UTC
(In reply to Karolin Seeger from comment #2)
Pushed to v4-6-test.
Closing out bug report.

Thanks!